--- a/src/it/junit-test/pom.xml
+++ b/src/it/junit-test/pom.xml
@@ -97,6 +97,7 @@
                             <formatting>
                                 <param>PRETTY_PRINT</param>
                             </formatting>
+                            <java-compiler-arguments/>
                             <language-out>ECMASCRIPT_2016</language-out>
                             <!-- dont want to parallelize -->
                             <thread-pool-size>0</thread-pool-size>
