--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,12 @@
       		<artifactId>walkingkooka-text-printer</artifactId>
       		<version>1.0-SNAPSHOT</version>
     	</dependency>
+
+        <dependency>
+            <groupId>walkingkooka</groupId>
+            <artifactId>walkingkooka-text-cursor-parser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -191,6 +197,14 @@
                 <configuration>
                     <source>9</source>
                     <target>9</target>
+                    <compilerArgs>
+                        <arg>-Awalkingkooka.j2cl.java.util.Currency=XXX</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.Locale=*</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.Locale.DEFAULT=en-AU</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.TimeZone=Australia/Sydney</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.TimeZone.DEFAULT=Australia/Sydney</arg>
+                        <arg>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</arg>
+                    </compilerArgs>
                     <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
