--- a/src/it/junit-test/pom.xml
+++ b/src/it/junit-test/pom.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright 2025 Miroslav Pokorny (github.com/mP1)
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  ~
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -55,6 +72,14 @@
                 <configuration>
                     <source>9</source>
                     <target>9</target>
+                    <compilerArgs>
+                        <arg>-Awalkingkooka.j2cl.java.util.Currency=XXX</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.Locale=EN-AU</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.Locale.DEFAULT=en-AU</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.TimeZone=Australia/*</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.TimeZone.DEFAULT=Australia/Sydney</arg>
+                        <arg>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</arg>
+                    </compilerArgs>
                     <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
@@ -62,6 +87,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -97,9 +123,15 @@
                             <formatting>
                                 <param>PRETTY_PRINT</param>
                             </formatting>
-                            <java-compiler-arguments/>
+                            <java-compiler-arguments>
+                                <param>-Awalkingkooka.j2cl.java.util.Currency=XXX</param>
+                                <param>-Awalkingkooka.j2cl.java.util.Locale=EN-AU</param>
+                                <param>-Awalkingkooka.j2cl.java.util.Locale.DEFAULT=en-AU</param>
+                                <param>-Awalkingkooka.j2cl.java.util.TimeZone=Australia/*</param>
+                                <param>-Awalkingkooka.j2cl.java.util.TimeZone.DEFAULT=Australia/Sydney</param>
+                                <param>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</param>
+                            </java-compiler-arguments>
                             <language-out>ECMASCRIPT_2016</language-out>
-                            <!-- dont want to parallelize -->
                             <thread-pool-size>0</thread-pool-size>
 
                             <classpath-required/>
