--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,12 @@
       		<artifactId>walkingkooka-text-printer</artifactId>
       		<version>1.0-SNAPSHOT</version>
     	</dependency>
+
+        <dependency>
+            <groupId>walkingkooka</groupId>
+            <artifactId>walkingkooka-tree</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
