--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,7 @@
 
         <dependency>
             <groupId>walkingkooka</groupId>
-            <artifactId>walkingkooka-tree</artifactId>
+            <artifactId>walkingkooka-tree-json</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
