--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
 
         <dependency>
             <groupId>walkingkooka</groupId>
+            <artifactId>walkingkooka-net</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>walkingkooka</groupId>
             <artifactId>walkingkooka-text-cursor-parser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
